Added countbase example.