@@ -5,27 +5,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<repositories>
-		<repository>
-			<id>sonatype-nexus-snapshots</id>
-			<name>Sonatype Nexus Snapshots</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
 
 	<groupId>com.knime.enterprise.cloud.services.catalog</groupId>
 	<artifactId>JsonPatchDemo</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
-		<maven.compiler.source>21</maven.compiler.source>
-		<maven.compiler.target>21</maven.compiler.target>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -46,54 +33,16 @@
 			<version>1.13</version>
 		</dependency>
 
+
 		<dependency>
-			<groupId>io.sirix</groupId>
-			<artifactId>sirix-core</artifactId>
-			<version>0.10.5</version>
+			<groupId>com.couchbase.lite</groupId>
+			<artifactId>couchbase-lite-java</artifactId>
+			<version>3.2.0</version> <!-- Change to the latest version -->
 		</dependency>
-		<dependency>
-			<groupId>net.openhft</groupId>
-			<artifactId>affinity</artifactId>
-			<version>3.23.3</version> <!-- Check for the latest version -->
-		</dependency>
+
 
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<release>21</release>  <!-- Target JDK 17 -->
-					<compilerArgs>
-						<arg>--enable-preview</arg> <!-- Enable preview features -->
-					</compilerArgs>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
-				<configuration>
-					<argLine>--enable-preview --add-opens java.base/java.lang.reflect=ALL-UNNAMED</argLine> <!-- Enable preview features for tests -->
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>3.0.0</version>
-				<configuration>
-					<mainClass>com.your.MainClass</mainClass>
-					<arguments>
-						<argument>--add-opens</argument>
-						<argument>java.base/java.lang.reflect=ALL-UNNAMED</argument>
-					</arguments>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
 
 </project>
